[workspace]
resolver = "2"
members = ["crates/*", "examples/*", ]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/voxell-tech/rectree"

[workspace.dependencies]
rectree = { version = "0.1.0", path = "crates/rectree" }
sparse_map = "0.1.0"
hashbrown = { version = "0.16.1", default-features = false, features = ["default-hasher", "inline-more"] }
kurbo = { version = "0.12.0", default-features = false }
bitflags = { version = "2", default-features = false }
