[package]
name = "spatree"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Fast 2D spatial indexing using Morton codes."
keywords = ["bvh", "spatial", "hash", "morton", "rectangle"]
categories = ["gui", "data-structures", "no-std"]
readme = "README.md"

[dependencies]
kurbo.workspace = true

[features]
default = ["std"]
std = ["kurbo/std"]
libm = ["kurbo/libm"]
