[package]
name = "vello_winit_examples"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rectree.workspace = true
hashbrown.workspace = true
kurbo.workspace = true
winit.workspace = true
vello.workspace = true
pollster.workspace = true
