[package]
name = "vello_winit_examples"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
rectree.workspace = true
hashbrown.workspace = true
kurbo.workspace = true
vello = "0.6"
winit = "0.30.12"
pollster = "0.4.0"
